tests/paczka1/fuzzy1/47806009.err
Error in line 12: A67 A226 38,4
Error in line 23: Jvz A67 77,6
Error in line 35: Jvz A56 64,6
